<?xml version="1.0" encoding="utf-8"?><!--
  ~ ************************************************************************************************
  ~ * © 2020, 2023 Qualcomm Technologies, Inc. and/or its subsidiaries. All rights reserved.       *
  ~ ************************************************************************************************
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/destination_information"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_info"
        android:contentDescription="@string/cont_desc_menu_info" />

    <item
        android:id="@id/destination_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        android:contentDescription="@string/cont_desc_menu_settings" />

</menu>
